Null-equality on 'fullDocument' is not rewritten correctly for change stream 'delete' events

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • v5.2, v5.1
    • QE 2021-12-27
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Null-equality predicates on fullDocument or its subfields are not rewritten correctly into the oplog for delete events, causing them to be omitted. This issue does not manifest for $exists:true, $exists:false, $ne:null, other comparison operators or their negations; only $eq:null, $gte:null and $lte:null are impacted.

            Assignee:
            Bernard Gorman
            Reporter:
            Bernard Gorman
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: